# wombatdb

./: .gitignore  CMakeLists.txt  Makefile  README.md  interpreter.c  q.txt  tests.c  tokenizer.c  tokenizer.h  tokenizer_2.c  tokenizer_2.h  two_pass_tokenizer.excalidraw
learning/: q.txt
tests/: classified_tokenizer_test.c  raw_tokenizer_test.c
tokenizer/: classified_tokenizer.c  classified_tokenizer.h  raw_tokenizer.c  raw_tokenizer.h
